--- a/algorithms/Ant algorithm/styles.css
+++ b/algorithms/Ant algorithm/styles.css
@@ -7,10 +7,13 @@
     text-align: center;
     margin: 0px;
 }
-.menu{
-    margin-top: 3px;
-    margin-bottom: 3px;
-}
+/* .menu{
+    display: flex;
+    justify-content: center;
+    flex-direction: row;
+    align-content: center;
+    text-align: center;
+} */
 .canvas{
     position: fixed;
     display: block;
