--- a/algorithms/A Star/styles.css
+++ b/algorithms/A Star/styles.css
@@ -11,3 +11,31 @@
 .empty{
     background-color: white;
 }
+
+.menu{
+    display: flex;
+    justify-content: center;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+    margin: 20px;
+}
+
+.container{
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    align-content: center;
+    align-items: center;
+    text-align: center;
+
+}
+
+.findButton
+{   font-size: medium;
+    margin: 20px;
+}
+
+.button{
+    margin-left: 10px;
+}
