--- a/algorithms/Ant algorithm/styles.css
+++ b/algorithms/Ant algorithm/styles.css
@@ -2,7 +2,7 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 .container{
-    width:95%;
+    width:100%;
     display: flex;
     justify-content: center;
     flex-direction: column;
@@ -11,7 +11,16 @@
     margin: 0px;
 }
 .menu{
+    display: flex;
+    justify-content: space-between;
     margin-top: 6px;
+    margin-left: 20px;
+    margin-right: 20px;
+}
+.startButton
+{
+    align-self: center;
+    font-size: medium;
 }
 .canvas{
     position: fixed;
@@ -24,3 +33,4 @@
 .inputField{
     width: 50px;
 }
+
